# test_task

./: .env  .gitignore  Dockerfile  README.md  app_exceptions.py  database.py  docker-compose.yml  insert_forms.py  insert_templates.py  logger.py  main.py  pyproject.toml  requirements.txt  schemas.py  services.py  settings.py  validator.py
app/: database.py  exceptions.py  main.py  services.py  validator.py
tests_app/: conftest.py  integration.py  unit.py
