[tool.poetry]
name = "test-app"
version = "0.1.0"
description = "path query validator"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-vvv -s"
filterwarnings = ['ignore::DeprecationWarning']
testpaths = [
    "tests_app/unit.py"
]