[tool.poetry]
name = "test_task"
version = "0.1.0"
description = "path query validator"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.104.1"}
loguru = "^0.7.2"
motor = "^3.3.2"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-vvv -s"
filterwarnings = ['ignore::DeprecationWarning']
testpaths = [
    "tests_app/unit.py"
]